@@ -22,11 +22,14 @@
      /usr/lib/rpmrebuild/plugins/demofiles.sh
      /usr/lib/rpmrebuild/plugins/uniq.plug
      /usr/lib/rpmrebuild/plugins/uniq.sh
+     /usr/lib/rpmrebuild/plugins/nodoc.plug
+     /usr/lib/rpmrebuild/plugins/nodoc.sh
 %doc /usr/share/man/man1/rpmrebuild.1*
 %doc /usr/share/man/man1/rpmrebuild_plugins.1*
 %doc /usr/share/man/man1/file2pacDep.plug.1rrp*
 %doc /usr/share/man/man1/demo.plug.1rrp*
 %doc /usr/share/man/man1/uniq.plug.1rrp*
+%doc /usr/share/man/man1/nodoc.plug.1rrp*
 
 %doc AUTHORS
 %doc COPYING
