@@ -147,12 +147,14 @@ demo.plug: a "dummy" plugin to show how plugins works
 uniq.plug: a very simple plugin to sort and clean duplicate spec lines
 .TP 
 file2pacDep.plug: a "real" plugin to convert file dependencies to package dependencies
+.TP 
+nodoc.plug : a plugin to remove documentation from a package
 .SH "PLUGINS' MANPAGES FILENAME CONVENTION"
 If you are going to write plugin (and manpage for it) it's strongly
 recommended than manpage's file looks like \fBname.1rrp\fP \- this way
-command \fB'man -k rrp'\fP will provide list of all rpmrebuild's plugins
+command \fB'man \-k rrp'\fP will provide list of all rpmrebuild's plugins
 installed. Please note, that \fBmakewhatis\fP should be run 
-before newly installed manpages will be available for \fB'man -k rrp'
+before newly installed manpages will be available for \fB'man \-k rrp'
 .SH "AUTHORS"
 .LP 
 Eric Gerbier <gerbier@users.sourceforge.net>
@@ -162,4 +164,4 @@ Valery Reznic <valery_reznic@users.sourceforge.net>
 See <URL:http://rpmrebuild.sourceforge.net/>.
 .SH "SEE ALSO"
 .LP 
-rpm(8), rpmbuild(8), rpmrebuild(1), 'man -k rrp' for plugins specific manpages
+rpm(8), rpmbuild(8), rpmrebuild(1), 'man \-k rrp' for plugins specific manpages
